data/diff_tests/wasmtime/call_IncorrectConditionEvaluation_3485.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\02\90\80\80\80\00\01\03\65\6e"
    "\76\08\65\78\74\65\72\6e\61\6c\00\00\03\83\80\80"
    "\80\00\02\01\01\07\88\80\80\80\00\01\04\74\65\73"
    "\74\00\01\0a\95\80\80\80\00\02\86\80\80\80\00\00"
    "\41\2a\10\00\0b\84\80\80\80\00\00\10\01\0b"
  )
""
)